# dotfiles

./: .bashrc  .chezmoi.toml.tmpl  .chezmoi.yaml.tmpl  .chezmoiignore  .claude.json  .gitattributes  .gitconfig  .gitignore  .wslconfig  DOCS_FEATURES.md  Install.ps1  README.md  VSCODE_COMMANDS_EXPLAINED.md  WSLhome  _run_before_ZZZ_nstall_software.ps1.tmpl  _run_once_before_javascript.js  _run_once_before_typescript.ts  chezmoiexternal.toml.tmpl  dot_bashrc  dot_claude.json  dot_condarc  dot_gitconfig  dot_trzsz.conf  dot_wslconfig  dotfiles-timer.ps1  dotfiles-timer.sh  executable_sh.cmd  push_local_changes.ps1  ref.txt  run_after_000_winutil_cli.ps1.tmpl  run_after_001_regedits.ps1.tmpl  run_after_999_restart_explorer.ps1  run_after_power_settings.ps1.tmpl  run_before_ZZZ_nstall_software.ps1.tmpl  run_once_after_000_winutil_cli.ps1 copy.tmpl  run_once_after_000_winutil_cli.ps1.tmpl  run_once_after_001_interception_driver.cmd.tmpl  run_once_before_000_set_powershell_execution_policy.cmd.tmpl  run_once_before_001_chocolatey_pwsh.cmd.tmpl  run_once_before_002_assert_powershell.ps1.tmpl  (+20 more)
.agents/claude/uv-tools/claude-tasks/: pyproject.toml
.agents/claude/uv-tools/claude-tasks/claude_tasks/: __init__.py  cli.py  common.py  list_cli.py  open_cli.py  open_plan_cli.py
.agents/claude/uv-tools/mcps/: README.md  pyproject.toml
.agents/claude/uv-tools/mcps/mcp_common/: __init__.py  base.py  launcher.py
.agents/claude/uv-tools/mcps/ping/: server.py
.agents/claude/uv-tools/mcps/pong/: server.py
.agents/claude/uv-tools/open-plan/: pyproject.toml
.agents/claude/uv-tools/open-plan/open_plan/: cli.py
.agents/claude/uv-tools/open-plan/src/open_plan/: __init__.py
.auth/: .gitkeep
.chezmoidata/: customization.yaml  env.yaml  pwsh.yaml  reg.yaml  software.yaml
.chezmoiexternals/: ahk.toml.tmpl  bin.toml  bin.toml.tmpl  fonts.toml.tmpl  lemonade.toml.tmpl  reg.toml.tmpl  terminal.yaml  terminal_tools.toml.tmpl  trzsz.toml.tmpl  winutil_cli.toml.tmpl
.chezmoiinterpreters/: powershell_fake.ps1  pwsh_interpreter.ps1  py_interpreter.ps1  wsl2_powershell_interpreter.ps1
.chezmoilib/: ChezmoiPwsh.psm1  Convert-ChezmoiAttributeString.psm1  ConvertTo-LocalPath.psm1  DesktopIniAttributes.psm1  Invoke-ChezmoiReAddSweep.ps1  generate_hooks.ps1
.chezmoitemplates/: attribDiff  pwshCommand  username_wsl  wslpath
.claude/: CLAUDE.md  agents  keybindings.json  settings.json  skills  statusline.py
.conda/: desktop.ini
.config/zellij/: README.md  attach-main.ps1  attach_main.py  config.kdl  dispatch.py  launcher.ps1  profiles.json  pyproject.toml  session-switcher.ps1  session_switcher.py
.dotfiles/: .gitattributes  .gitignore  README.md  dotfiles-timer.ps1  dotfiles-timer.sh
.dotfiles/githooks-runner/: .gitignore  README.md  pyproject.toml
.dotfiles/githooks-runner/dotfiles_githooks/: __init__.py  __main__.py  cli.py  install.py  names.py
.githooks/: Run-GitHook.ps1  print-hook-name
.powershell/: profile.ps1
.wsl2/: .wslconfig  apt-cache-policy.txt  apt-packages.txt  wsl.conf
Documents/: Entertainment  symlink_Entertainment.tmpl  symlink_WindowsPowerShell  symlink_source.tmpl
dot_PowerShell/: desktop.ini  profile.ps1  run_onchange_desktopini.ps1.tmpl
dot_choco/: packages.config  packages.config.backup
dot_claude/: statusline.ps1  symlink_keybindings.json.tmpl  symlink_settings.json.tmpl
dot_conda/: _run_after_010_setperm_desktopini.ps1.tmpl  desktop.ini  run_after_010_setperm_desktopini.ps1.tmpl
dot_readonly_powershell/: profile.ps1  pwsh-modules.txt
dot_readonly_vscode/: desktop.ini  settings.json
dot_readonly_wsl2/: dot_wslconfig
dot_rustup/: settings.toml
dot_ssh/: config
dot_vscode/: cursor-extensions.txt  desktop.ini  extensions.txt  keybindings.json  run_after_010_install_extensions.ps1.tmpl  run_before_unsetperm_desktopini.ps1.tmpl  run_onchange_010_install_extensions.ps1.tmpl  run_onchange_after_010_setperm_desktopini.ps1.tmpl  run_onchange_desktopini.ps1.tmpl  settings.json
dot_wsl2/: desktop.ini  dot_bashrc  dot_wslconfig  run_before_001_wsl2_bashrc_symlink.ps1.tmpl  run_before_001_wsl2_bashrc_symlink.sh.tmpl
readonly_dot_VirtualBox/: desktop.ini
readonly_dot_claude/: desktop.ini  settings.json
(+213 files in other folders)
