[project]
name = "zellij-dispatch"
version = "0.1.0"
description = "Cross-platform zellij keybind dispatcher (install via `uv tool install --editable`)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
zellij-dispatch = "dispatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["dispatch.py"]
