[project]
name = "dotfiles-githooks"
version = "0.1.0"
description = "Cross-platform git hook runner for dotfiles (invoked via uv run from POSIX shell stubs)"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dotfiles_githooks"]
