[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-tasks"
version = "0.1.0"
description = "View the current Claude Code session's task list (list-tasks) and open it as a markdown dashboard (open-tasks)."
requires-python = ">=3.11"
dependencies = [
    # Used by claude_tasks.common to walk the parent process tree and find
    # the Claude Code process that spawned us, for fast session_id -> name
    # lookup via ~/.claude/sessions/<pid>.json.
    "psutil>=5.9",
]
authors = [{ name = "devic" }]

[project.scripts]
list-tasks   = "claude_tasks.list_cli:main"
claude-tasks = "claude_tasks.cli:main"

[tool.hatch.build.targets.sdist]
include = ["claude_tasks", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["claude_tasks"]
