[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcps"
version = "0.1.0"
description = "Collection of MCP servers for Claude Code. Each MCP lives in its own subdirectory and is discovered at runtime by the mcps-run launcher."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]
authors = [{ name = "devic" }]

[project.scripts]
mcps-run = "mcp_common.launcher:main"

[tool.hatch.build.targets.sdist]
include = ["mcp_common", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_common"]
