[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-plan"
version = "0.1.0"
description = "Open the current Claude Code session's plan file in Obsidian."
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "devic" }]
readme = { content-type = "text/markdown", text = """
open-plan — Open the current Claude Code session's plan file in Obsidian.

Install:
    uv tool install C:/Users/devic/.agents/claude/uv-tools/open-plan

Invoke (from inside Claude Code's `!` prefix, or any shell):
    open-plan

Resolution order:
  1. Session-aware: `$CLAUDE_CODE_SESSION_ID` -> matching transcript
     JSONL under `~/.claude/projects/` -> grep for the plan-mode
     discriminator phrases injected by the Claude Code harness.
  2. Fallback: most-recently-modified `.md` under `~/.claude/plans/`.

The chosen method is printed as `Resolution:` so you always know
which logic answered.
""" }

[project.scripts]
open-plan = "open_plan.cli:main"

[tool.hatch.build.targets.sdist]
include = ["open_plan", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["open_plan"]
